unpackaged/main/default/objects/ETT_Brand_Master__c/ETT_Brand_Master__c.object-meta.xml
<CustomObject>
    <label>Brand Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>