unpackaged/main/default/objects/ETT_Brand_Master__c/fields/ETT_Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>