unpackaged/main/default/objects/ETT_Brand_Master__c/fields/ETT_Created_By__c.field-meta.xml
<CustomField>
    <fullName>ETT_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brand_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>