unpackaged/main/default/objects/ETT_Brand_Master__c/fields/ETT_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>